--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,26 @@
+// filepath: public/.htaccess
 <IfModule mod_rewrite.c>
-    RewriteEngine On RewriteRule ^(.*)$ public/$1 [L]
+    <IfModule mod_negotiation.c> Options -MultiViews -Indexes </IfModule>
+
+    # CORS Headers
+    <IfModule mod_headers.c>
+        SetEnvIf Origin "^https://pms-frontend-chi-five\.vercel\.app$"
+        ORIGIN_ALLOWED=$0 SetEnvIf Origin "^http://localhost:5173$"
+        ORIGIN_ALLOWED=$0 Header always set Access-Control-Allow-Origin
+        "%{ORIGIN_ALLOWED}e" env=ORIGIN_ALLOWED Header always set
+        Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH"
+        Header always set Access-Control-Allow-Headers "Content-Type,
+        Authorization, X-Requested-With, Accept, Origin" Header always set
+        Access-Control-Allow-Credentials "true" Header always set
+        Access-Control-Max-Age "3600"
+    </IfModule>
+
+    # Handle OPTIONS preflight RewriteEngine On RewriteCond %{REQUEST_METHOD}
+    OPTIONS RewriteRule ^(.*)$ $1 [R=200,L] # Authorization Header RewriteCond
+    %{HTTP:Authorization} . RewriteRule .* -
+    [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}] # Redirect trailing slashes
+    RewriteCond %{REQUEST_FILENAME} !-d RewriteCond %{REQUEST_URI} (.+)/$
+    RewriteRule ^ %1 [L,R=301] # Front controller RewriteCond
+    %{REQUEST_FILENAME} !-d RewriteCond %{REQUEST_FILENAME} !-f RewriteRule ^
+    index.php [L]
 </IfModule>
