--- a/.htaccess
+++ b/.htaccess
@@ -1,24 +1,19 @@
-// filepath: public/.htaccess
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c> Options -MultiViews -Indexes </IfModule>
 
-    # CORS Headers
+    RewriteEngine On # CORS Configuration
     <IfModule mod_headers.c>
-        SetEnvIf Origin "^https://pms-frontend-chi-five\.vercel\.app$"
-        ORIGIN_ALLOWED=$0 SetEnvIf Origin "^http://localhost:5173$"
-        ORIGIN_ALLOWED=$0 Header always set Access-Control-Allow-Origin
-        "%{ORIGIN_ALLOWED}e" env=ORIGIN_ALLOWED Header always set
+        Header set Access-Control-Allow-Origin
+        "https://pms-frontend-chi-five.vercel.app" Header set
         Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH"
-        Header always set Access-Control-Allow-Headers "Content-Type,
-        Authorization, X-Requested-With, Accept, Origin" Header always set
-        Access-Control-Allow-Credentials "true" Header always set
-        Access-Control-Max-Age "3600"
+        Header set Access-Control-Allow-Headers "Content-Type, Authorization,
+        X-Requested-With, Accept, Origin" Header set
+        Access-Control-Allow-Credentials "true"
     </IfModule>
 
-    # Handle OPTIONS preflight RewriteEngine On RewriteCond %{REQUEST_METHOD}
-    OPTIONS RewriteRule ^(.*)$ $1 [R=200,L] # Authorization Header RewriteCond
-    %{HTTP:Authorization} . RewriteRule .* -
-    [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}] # Redirect trailing slashes
+    # Preflight OPTIONS RewriteCond %{REQUEST_METHOD} OPTIONS RewriteRule .* /
+    [R=200,L] # Authorization RewriteCond %{HTTP:Authorization} .+ RewriteRule ^
+    - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}] # Trailing slashes
     RewriteCond %{REQUEST_FILENAME} !-d RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301] # Front controller RewriteCond
     %{REQUEST_FILENAME} !-d RewriteCond %{REQUEST_FILENAME} !-f RewriteRule ^
