--- a/.env
+++ b/.env
@@ -26,12 +26,13 @@ LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+
 DB_CONNECTION=mysql
-DB_HOST=sql305.infinityfree.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=if0_40747210_project_management
-DB_USERNAME=if0_40747210
-DB_PASSWORD=ZyuJ8Hk1hT8
+DB_DATABASE=projectmanagementsystem
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -72,6 +73,3 @@ VITE_APP_NAME="${APP_NAME}"
 
 
 BROADCAST_CONNECTION=pusher
-
-
-FRONTEND_URL=https://pms-frontend-chi-five.vercel.app
